add documentation  for all files + minor fixes
updated movie rating and showtime price to Double, changes Put endpoints to POST since it was specified to be Post in readme.md